Add Deleting a Cast via Backbone Rails

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,12 @@
       </div>
     </div>
 
+
     <div class="container">
+      <div class='alert alert-error'>
+        <button class='close' data-dismiss='alert'>&times;</button>
+        <div class='error_list'></div>
+      </div>
         <div class="row">
           <div class="span9">
             <%= bootstrap_flash %>
