--- a/app/assets/stylesheets/video.css.scss
+++ b/app/assets/stylesheets/video.css.scss
@@ -3,10 +3,18 @@
         li {
           position:relative;
           padding:0.5em;
-          font-size: 25px;
-          color:red;
           border-bottom: 1px solid #ccc;
-          &.watched {
+          a.eye {
+            color:black;
+            text-decoration: none;
+            position: absolute;
+            right: 5em;
+          }
+          a#title {
+            font-size: 25px;
+            color:red;
+          }
+          &.watched a#title {
             color:green;
           }
           img {
@@ -14,6 +22,7 @@
             float:right;
             position: absolute;
             right:10px;
+            bottom: 4px;
           }
       }
     }
