--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,9 @@
           <a class="brand" href="#">VideoTracker</a>
           <div class="container nav-collapse">
             <ul class="nav">
+              <li><%= link_to "My Blog", "http://www.georgediaz.org", :target => '_blank'  %></li>
               <li><%= link_to "Link1", "/path1"  %></li>
               <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -74,9 +74,9 @@
               <h3>Sidebar</h3>
               <ul class="nav nav-list">
                 <li class="nav-header">Sidebar</li>
+                <li><%= link_to "My Blog", "http://www.georgediaz.org", :target => '_blank'  %></li>
                 <li><%= link_to "Link1", "/path1"  %></li>
                 <li><%= link_to "Link2", "/path2"  %></li>
-                <li><%= link_to "Link3", "/path3"  %></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span-->
